--- a/Project-1 Netflix Clone/index.html
+++ b/Project-1 Netflix Clone/index.html
@@ -22,9 +22,24 @@
       <a href="#" class="btn btn-xl">
         Watch Free for 30 Days <i class="fas fa-chevron-right btn-icon btn-lg"></i>
       </a>
-
     </div>
   </header>
+  <section class="tabs">
+    <div class="container">
+      <div id="tab-1" class="tab-item tabs-border">
+        <i class="fas fa-door-open fa-3x"></i>
+        <p class="hide-sm">Cancel anytime</p>
+      </div>
+      <div id="tab-2" class="tab-item">
+        <i class="fas fa-tablet-alt fa-3x"></i>
+        <p class="hide-sm">Watch anywhere</p>
+      </div>
+      <div id="tab-3" class="tab-item">
+        <i class="fas fa-tags fa-3x"></i>
+        <p class="hide-sm">Pick your price</p>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
