--- a/Project-1 Netflix Clone/index.html
+++ b/Project-1 Netflix Clone/index.html
@@ -117,9 +117,9 @@
           <tbody>
             <tr>
               <td>Monthly price after free month ends on 6/19/19</td>
-              <td>$8.99</td>
-              <td>$12.99</td>
-              <td>$15.99</td>
+              <td>€7.99</td>
+              <td>€12.99</td>
+              <td>€15.99</td>
             </tr>
             <tr>
               <td>HD Available</td>
@@ -201,6 +201,8 @@
     </div>
 
   </footer>
+
+  <script src="./JS/main.js"></script>
 </body>
 
 </html>
